[package]
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
autoexamples = true
name = "tuiscope"
description = "Rust TUI fuzzy finder widget inspired by telescope for neovim"
documentation = "https://docs.rs/olidacombe/latest/tuiscope/"
edition = "2021"
keywords = ["tui", "terminal", "fuzzy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/olidacombe/tuiscope"
readme = "README.md"
rust-version = "1.65.0"
version = "0.2.1"

[dependencies]
fuzzy-matcher = "0.3.7"
serde = { version = "1", optional = true, features = ["derive"] }
time = { version = "0.3.25", optional = true, features = ["local-offset"] }
tui = { package = "ratatui", version = "0.22.0", features = ["all-widgets"] }
unicode-segmentation = "1.10"
unicode-width = "0.1"
thiserror = "1.0.44"
tracing = "0.1.37"
rayon = "1.7.0"
indexmap = { version = "2.0.0", features = ["rayon"] }

[dev-dependencies]
anyhow = "1.0.72"
crossterm = { version = "0.27.0" }
criterion = { version = "0.5", features = ["html_reports"] }
fakeit = "1.1"
rand = "0.8"
tracing-subscriber = "0.3.17"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[[bench]]
name = "update_filtered_list"
harness = false
